[project]
name = "auto-wrench"
version = "0.2.0"
description = "Automated registration package for urban sensor endpoints into metadata catalogs"
authors = [
    {name = "Jeffrey Limnardy", email = "jeffreylimnardy@yahoo.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["IoT", "sensors", "metadata", "catalog", "SensorThings", "urban", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.10.4,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "ckanapi>=4.8,<5.0",
    "python-dotenv>=1.0.1",
    "geojson>=3.2.0",
    "pyyaml>=6.0.0",
    "xxhash>=3.5.0",
    "apscheduler>=3.11.0",
    "openai>=1.76.0",
    "matplotlib>=3.10.1",
    "psutil>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/urbansense/wrench"
Repository = "https://github.com/urbansense/wrench"
Documentation = "https://urbansense.github.io/wrench"
"Bug Tracker" = "https://github.com/urbansense/wrench/issues"
Changelog = "https://github.com/urbansense/wrench/blob/main/CHANGELOG.md"

[project.optional-dependencies]
teleclass = [
    "sentence-transformers>=3.3.1",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "ollama>=0.4.5",
    "yake>=0.4.8",
    "rank_bm25>=0.2.2",
]
sensorthings = [
    "paho-mqtt>=2.1.0",
]
kinetic = [
    "flair>=0.15.1",
    "keybert>=0.9.0",
    "networkx>=3.4.2",
    "python-louvain>=0.16",
]

[dependency-groups]
test = [
    "pytest>=8.3.0",
    "pytest-mock",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.3",
    "responses>=0.25.0",
]
lint = [
    "ruff<1.0.0,>=0.5.0",
    "codespell>=2.2.0,<3.0.0",
    "mypy>=1.15.0"
]
dev = [
    "gprof2dot>=2025.4.14",
    "ipykernel>=6.29.5",
    "memray>=1.17.2",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.14.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "D100",  # missing docstring in public module
    "D101",  # missing docstring in public class
    "D104",  # missing docstring in public package
    "D102",  # missing docstring in public method
    "D105",  # missing docstring in magic method
    "D107",  # Missing docstring in __init__ method
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]     # Disable docstring checks for tests
"examples/*" = ["D"]  # Disable docstring checks for example scripts

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,*.json,_dist,build,*.pyc,.venv,*.txt'
ignore-words-list = 'wrench'
check-filenames = true
check-hidden = true

[tool.pytest.ini_options]
addopts = "-v --cov=wrench --cov-report=term-missing"
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring live services",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
source = ["wrench"]

[tool.mypy]
disable_error_code = ["import-untyped"]

# ── git-cliff changelog generator ─────────────────────────────────
# Body template: .github/cliff-template.tera (passed via --body flag)
# Usage:
#   Full changelog:    git cliff --body .github/cliff-template.tera -o CHANGELOG.md
#   Single release:    git cliff --body .github/cliff-template.tera --latest --strip header
[tool.git-cliff.changelog]
header = """# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
# Body template is in .github/cliff-template.tera — pass via CLI:
#   git cliff --body .github/cliff-template.tera
footer = ""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = false
split_commits = false
commit_parsers = [
    { message = "^feat", group = "New Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^perf", group = "Enhancements" },
    { message = "^refactor", group = "Enhancements" },
    { message = "^doc", group = "Documentation" },
    { message = "^test", group = "Testing" },
    { message = "^chore", skip = true },
    { message = "^ci", skip = true },
    { message = "^build", skip = true },
    { message = "^style", skip = true },
    { message = "^revert", skip = true },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "v?[0-9].*"
skip_tags = ""
topo_order = false
sort_commits = "oldest"

[tool.git-cliff.remote.github]
owner = "urbansense"
repo = "wrench"

# Optional extras not installed in the lint environment
[[tool.mypy.overrides]]
module = [
    "fsspec",
    "fsspec.implementations.local",
    "sentence_transformers",
    "sklearn.decomposition",
    "sklearn.feature_extraction.text",
    "sklearn.metrics",
    "community",
    "yake",
    "keybert",
    "keybert.llm",
]
ignore_missing_imports = true
